--- a/registration/app/views/users/show.html.erb
+++ b/registration/app/views/users/show.html.erb
@@ -1,3 +1,5 @@
 <h1><%= @user.name %> (<%= @user.email %>)</h1>
+<%= link_to "Ta bort användare", @user, method: :delete, data: {confirm: "Är du säker på att du vill ta bort användaren?"} %>
+
 
 <h3>Api-nycklar:</h3>
