--- a/registration/app/views/layouts/application.html.erb
+++ b/registration/app/views/layouts/application.html.erb
@@ -8,6 +8,13 @@
 </head>
 <body>
 
+Är inloggad: <%= logged_in? %>
+<% if logged_in? %>
+	<%= link_to "Logga ut", logout_path, method: "delete" %>
+<% else %>
+	<%= link_to "Logga in", login_path %>
+<% end %>
+
 <%= yield %>
 
 </body>
