--- a/registration/app/views/apikeys/index.html.erb
+++ b/registration/app/views/apikeys/index.html.erb
@@ -1,11 +1,36 @@
-<h1>Alla API-nycklar</h2>
+<div class="jumbotron">
+	<h1>API-nycklar</h2>
+	<%= link_to "Skapa ny API-nyckel", new_user_apikey_path(@user) %>
+</div>
 
-<%= link_to "Skapa ny API-nyckel", new_user_apikey_path(@user) %>
-
-<ul id="apikeys">	
+<h3>Alla dina api nycklar:</h3>
+<ul id="apikeys">
+	<li>
+		<div class="row">
+			<div class="col-md-5">
+				Domännamn
+			</div>
+			<div class="col-md-5">
+				API-nyckel
+			</div>
+			<div class="col-md-2">
+				Revoked
+			</div>
+		</div>
+	</li>	
 	<% @apikeys.each do |apikey| %>
 		<li>
-			<%= link_to apikey.domain, user_apikey_path(@user, apikey) %> <%= apikey.key %>
+			<div class="row">
+				<div class="col-md-5">
+					<%= link_to apikey.domain, user_apikey_path(@user, apikey) %>
+				</div>
+				<div class="col-md-5">
+					<%= apikey.key %>
+				</div>
+				<div class="col-md-2">
+					<%= apikey.revoked %>
+				</div>
+			</div>
 		</li>
 	<% end %>
 </ul>	
