--- a/registration/app/views/apikeys/edit.html.erb
+++ b/registration/app/views/apikeys/edit.html.erb
@@ -1,10 +1,5 @@
-<h1>Redigera API-nyckel</h1>
+<div class="jumbotron">
+	<h1>Redigera API-nyckel</h1>
 
-<%= form_for([@user, @apikey]) do |f| %>
-
-	<%= f.label :domain %>
-	<%= f.text_field :domain %>
-
-	<%= f.submit "Skapa nyckel" %>
-
-<% end %>
+	<%= render 'apikeys/form', :olduser => true %>
+</div>
