--- a/registration/app/views/apikeys/new.html.erb
+++ b/registration/app/views/apikeys/new.html.erb
@@ -1,11 +1,5 @@
-<h1>Skapa en ny API-nyckel</h1>
+<div class="jumbotron">
+	<h2>Skapa en ny API-nyckel</h2>
 
-
-<%= form_for([@user, @apikey]) do |f| %>
-
-	<%= f.label :domain %>
-	<%= f.text_field :domain %>
-
-	<%= f.submit "Skapa nyckel" %>
-
-<% end %>
+	<%= render 'apikeys/form', :olduser => false %>
+</div>
