--- a/registration/app/views/users/show.html.erb
+++ b/registration/app/views/users/show.html.erb
@@ -1,5 +1,6 @@
-<h1><%= @user.name %> (<%= @user.email %>)</h1>
-<%= link_to "Ta bort användare", @user, method: :delete, data: {confirm: "Är du säker på att du vill ta bort användaren?"} %>
-<%= link_to "Redigera användare", edit_user_path(@user) %>
-
-<h3>Api-nycklar:</h3>
+<div class="jumbotron">
+	<h2><%= @user.name %> (<%= @user.email %>)</h2>
+	<p><%= link_to "Ta bort användare", @user, method: :delete, data: {confirm: "Är du säker på att du vill ta bort användaren?"} %></p>
+	<p><%= link_to "Redigera användare", edit_user_path(@user) %></p>
+	<p><%= link_to "API-nycklar", user_apikeys_path(@user) %></p>
+</div>
