--- a/registration/app/views/users/index.html.erb
+++ b/registration/app/views/users/index.html.erb
@@ -1,9 +1,10 @@
 <h1>Alla användare</h2>
-
-<ul id="users">	
-	<% @users.each do |user| %>
-		<li>
-			<%= link_to "#{user.name} (#{user.email})", user %>
-		</li>
-	<% end %>
-</ul>	
+<%= will_paginate %>
+	<ul id="users">	
+		<% @users.each do |user| %>
+			<li>
+				<%= link_to "#{user.name} (#{user.email})", user %>
+			</li>
+		<% end %>
+	</ul>	
+<%= will_paginate %>
