Changed domain to name. Created domain model

--- a/registration/app/views/apikeys/show.html.erb
+++ b/registration/app/views/apikeys/show.html.erb
@@ -1,6 +1,6 @@
 <div class="jumbotron">
 <h1>API-nyckel</h1>
-<p>Domän: <%= @apikey.domain %></p>
+<p>Domän: <%= @apikey.name %></p>
 <p>Nyckel: <%= @apikey.key %></p>
 
 <p><%= link_to "Ta bort nyckel", user_apikey_path(@user, @apikey),
