--- a/registration/app/views/apikeys/_form.html.erb
+++ b/registration/app/views/apikeys/_form.html.erb
@@ -11,9 +11,9 @@
 		<% end %>
 	</div>
 	<div class="form-group">
-		<%= f.label :domain, class: "col-sm-2 control-label" %>
+		<%= f.label :name, class: "col-sm-2 control-label" %>
 		<div class="col-sm-10">
-			<%= f.text_field :domain, class: "form-control", placeholder: "http://www.youtube.com" %>
+			<%= f.text_field :name, class: "form-control" %>
 		</div>
 	</div>
 	<% if current_user.admin? %>
