--- a/registration/app/views/apikeys/index.html.erb
+++ b/registration/app/views/apikeys/index.html.erb
@@ -8,7 +8,7 @@
 	<li>
 		<div class="row">
 			<div class="col-md-5">
-				Domännamn
+				Namn
 			</div>
 			<div class="col-md-5">
 				API-nyckel
@@ -22,7 +22,7 @@
 		<li>
 			<div class="row">
 				<div class="col-md-5">
-					<%= link_to apikey.domain, user_apikey_path(@user, apikey) %>
+					<%= link_to apikey.name, user_apikey_path(@user, apikey) %>
 				</div>
 				<div class="col-md-5">
 					<%= apikey.key %>
