--- a/registration/app/views/users/show.html.erb
+++ b/registration/app/views/users/show.html.erb
@@ -2,11 +2,7 @@
 	<h2><%= @user.name %> (<%= @user.email %>)</h2>
 	<p><%= link_to "Ta bort användare", @user, method: :delete, data: {confirm: "Är du säker på att du vill ta bort användaren?"} %></p>
 	<p><%= link_to "Redigera användare", edit_user_path(@user) %></p>
-</div>
-
-<div class="jumbotron">
-	<h1>API-nycklar</h2>
-	<%= link_to "Skapa ny API-nyckel", new_user_apikey_path(@user) %>
+	<p><%= link_to "Skapa ny API-nyckel", new_user_apikey_path(@user) %></p>
 </div>
 
 <h3>Alla dina api nycklar:</h3>
