--- a/RestaurantManager/views/restaurants/restaurants.html
+++ b/RestaurantManager/views/restaurants/restaurants.html
@@ -7,6 +7,9 @@
 		</ul>
 	</div>
 	<div class="col-md-9 fullheight">
-		<ui-gmap-google-map center='map.center' zoom='map.zoom' ></ui-gmap-google-map>
+		<ui-gmap-google-map center='map.center' zoom='map.zoom' >
+			<ui-gmap-markers models="restaurantmarkers" coords="'self'" icon="'icon'"></ui-gmap-markers>
+		</ui-gmap-google-map>	
 	</div>
 </div>
+<p>{{restaurantsError}}</p>
