--- a/RestaurantManager/stylesheet/app.css
+++ b/RestaurantManager/stylesheet/app.css
@@ -1,4 +1,4 @@
-html, body {
+html, body, #contents {
     height: 100%;
 }
 
@@ -12,3 +12,15 @@ html, body {
 }
 
 
+.paginationBtns {
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+}
+.paginationBtns .btn {
+	width: 25%;
+	font-size: 2em;
+	float: left;
+	height: 70px;
+	padding: 0;
+}
