Added Tags autocomplete directory

--- a/RestaurantManager/views/restaurants/search.html
+++ b/RestaurantManager/views/restaurants/search.html
@@ -1,12 +1,11 @@
 <div>
+	<tags-searcher></tags-searcher>
+    {{tagAutocomplete}}
+
     <form data-ng-submit="search(searchWords)">
         <div class="form-group has-feedback">
         <input class="form-control" data-ng-model="searchWords" />
          <i class="glyphicon glyphicon-search form-control-feedback"></i>
         </div>
-    </form>
-
-    <p data-ng-if="latestSearch">
-        Result for search: {{latestSearch}}
-    </p>
+    </form>    
 </div>
