Added get own restaurants.
Added so server also returns user id when logged in.

--- a/RestaurantManager/views/restaurants.html
+++ b/RestaurantManager/views/restaurants.html
@@ -4,6 +4,7 @@
 		<a href="#{{ 's1' | routeSegmentUrl}}">Home</a>	
 		<a href="#{{ 's1.search' | routeSegmentUrl}}">Search</a>
 		<a href="#{{ 's1.create' | routeSegmentUrl}}">Create</a>
+		<a href="#{{ 's1.created' | routeSegmentUrl}}">My restaurants</a>
 				
 		<div app-view-segment="1"></div>
 
