--- a/RestaurantManager/views/restaurants/positions.html
+++ b/RestaurantManager/views/restaurants/positions.html
@@ -1,2 +1,3 @@
-Info om hur man letar runt. 
-<p>{{restaurantsError}}</p>
+<div class="positionsInfo">
+	<p>Please navigate the map and restaurants will load relevant to your position!</p>
+</div>
