--- a/RestaurantManager/stylesheet/app.css
+++ b/RestaurantManager/stylesheet/app.css
@@ -80,7 +80,9 @@ html, body, .fullscreen {
 	border-radius: 4px;
 	padding: 5px;
 }
-
+.restaurantHeader {
+	cursor: pointer;
+}
 .restaurantName {
 	font-size: 1em;
 	cursor: pointer;
