--- a/RestaurantManager/views/restaurants.html
+++ b/RestaurantManager/views/restaurants.html
@@ -13,11 +13,10 @@
 
 		<div class="sideContent">
 			<div class="restaurantForms" app-view-segment="1"></div>
-			<!--<p data-ng-show="!restData.restaurants.length && !restData.selectmarker.show">Inga restauranger</p>-->
-			<ul data-ng-if="restData.restaurants.length" class="restaurantList list-unstyled">
-				<li data-ng-repeat="restaurant in restData.restaurants" >
-					<div data-ng-click="showMoreInfo = !showMoreInfo">
-						<p data-ng-class="{shortWithMoreInfo: showMoreInfo}" class="restaurantName" >{{restaurant.name}}</p>
+			<ul data-ng-if="restData.restaurants.length" id="restaurantList" class="restaurantList list-unstyled">
+				<li data-ng-repeat="restaurant in restData.restaurants" id="restaurant{{restaurant.id}}">
+					<div class="restaurantHeader" data-ng-click="restaurant.showMoreInfo = !restaurant.showMoreInfo">
+						<p data-ng-class="{shortWithMoreInfo: restaurant.showMoreInfo}" class="restaurantName" >{{restaurant.name}}</p>
 						<div data-ng-if="restData.ownRestaurants" class="btn-group restaurantEditBtns" role="group" aria-label="...">
 							<a href="#{{ 's1.edit' | routeSegmentUrl: {id: restaurant.id} }}" type="button" class="btn btn-success btn-xs">
 								<span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
@@ -27,7 +26,7 @@
 							</button>
 						</div>
 					</div>
-					<div class="restaurantMoreInfo" data-ng-show="showMoreInfo">
+					<div class="restaurantMoreInfo" data-ng-show="restaurant.showMoreInfo">
 						<div class="row">
 							<div class="col-sm-4 attributeDescription">Phone:</div>
 							<div class="col-sm-8"><p>{{restaurant.phone}}</p></div>
@@ -70,14 +69,17 @@
 	</div>
 	<div class="col-md-9 fullheight">
 		<ui-gmap-google-map center='restData.map.center' zoom='restData.map.zoom' bounds="restData.map.bounds" draggable="true" control="restData.map.control">
-			<ui-gmap-markers models="restData.restaurantmarkers" coords="'self'" dra icon="'icon'">
-				<ui-gmap-windows show="'showWindow'" closeClick="'closeClick'" ng-cloak>
-				 	<div>
-				 		<h4>{{self}}</h4>
-				 	</div>
-            	</ui-gmap-windows>
-			</ui-gmap-markers>
-			<ui-gmap-marker data-ng-if="restData.selectmarker.show" coords="restData.selectmarker.coords" options="restData.selectmarker.options" events="restData.selectmarker.events" idkey="restData.selectmarker.id">
+	        <ui-gmap-marker data-ng-repeat="m in restData.restaurants" coords="m" icon="m.icon" click="showRestaurantInfo(m);" idKey="m.id">
+	            <ui-gmap-window data-ng-cloak  coords="map.infoWindowWithCustomClass.coords" show="m.showMoreInfo" closeClick="m.showMoreInfo = false" 
+	            	options="map.infoWindowWithCustomClass.options">
+	            	<div>
+		            	<p>{{m.name}}</p>
+		            	<p>{{m.address}}</p>
+		            </div>
+	            </ui-gmap-window>
+	        </ui-gmap-marker>
+			<ui-gmap-marker data-ng-if="restData.selectmarker.show" coords="restData.selectmarker.coords" options="restData.selectmarker.options" 
+				events="restData.selectmarker.events" idkey="restData.selectmarker.id">
 		</ui-gmap-google-map>	
 		
 	</div>
